# TradeVision

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  netlify.toml  requirements.txt  start.ps1
backend/: .env.example  main.py  requirements.txt
backend/app/: __init__.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  auth.py  backtest.py  market.py  scanner.py  signals.py
backend/app/services/: __init__.py  ai_scorer.py  market_data.py  technical_analysis.py
frontend/: _redirects  index.html
frontend/css/: animations.css  base.css  components.css  layout.css  pages.css  responsive.css  variables.css
frontend/js/: ai-scoring.js  api.js  app.js  auth.js  config.js  router.js  scanner-engine.js  utils.js
frontend/js/components/: charts.js  widgets.js
frontend/js/pages/: alerts.js  analysis.js  backtest.js  overview.js  scanner.js  settings.js  signals.js  watchlist.js
launcher/: README.md  main.cpp
netlify/functions/: auth_login.mjs  auth_login.py  auth_me.py  auth_refresh.py  auth_register.py  auth_token_info.py  backtest_run.py  config.py  health.py  market_candles.py  market_movers.py  market_overview.py  market_stock.py  requirements.txt  scanner_scan.py  shared.py  signals_detail.py  signals_list.py
